--- a/LITReview/templates/index.html
+++ b/LITReview/templates/index.html
@@ -16,9 +16,9 @@
         <nav>
             <div id="header_menu">
                 {% if user.is_authenticated %}
-                <a href=#>Flux</a>
-                <a href=#>Abonnements</a>
-                <a href="{% url 'logout' %}">Se déconnecter</a>
+                <a id="nav__flux" href=#>Flux</a>
+                <a id="nav__abo" href=#>Abonnements</a>
+                <a id="nav__logout" href="{% url 'logout' %}">Se déconnecter</a>
                 {% endif %}
             </div>
         </nav>
