--- a/LITReview/users/templates/users/register.html
+++ b/LITReview/users/templates/users/register.html
@@ -7,6 +7,6 @@
         {{ form.as_p }}
 
         <button type="submit" id="btn__validateRegistration">S'inscrire</button>
-        <button onclick="location.href='{% url 'registration' %}'" id="btn__goToLogin" >Retourner</button>
+        <button onclick="location.href='{% url 'login' %}'" id="btn__goToLogin" >Retour</button>
     </form>
 {% endblock content%}
