--- a/LITReview/templates/index.html
+++ b/LITReview/templates/index.html
@@ -17,7 +17,7 @@
             <div id="header_menu">
                 {% if user.is_authenticated %}
                 <a id="nav__flux" href="{% url 'flux'%}">Flux</a>
-                <a id="nav__abo" href=#>Abonnements</a>
+                <a id="nav__abo" href={% url 'subscriptions' %}>Abonnements</a>
                 <a id="nav__logout" href="{% url 'logout' %}">Se déconnecter</a>
                 {% endif %}
             </div>
