--- a/LITReview/templates/index.html
+++ b/LITReview/templates/index.html
@@ -14,9 +14,11 @@
     <header>
         <h1 id="mainTitle">LITReview</h1>
         <nav>
+        {% if user.is_authenticated %}
+        <div id="nav__username">Utilisateur connecté : {{ user.username }}
             <div id="header_menu">
-                {% if user.is_authenticated %}
                 <a id="nav__flux" href="{% url 'flux'%}">Flux</a>
+                <a id="nav__post" href="{% url 'posts'%}">Posts</a>
                 <a id="nav__abo" href={% url 'subscriptions' %}>Abonnements</a>
                 <a id="nav__logout" href="{% url 'logout' %}">Se déconnecter</a>
                 {% endif %}
@@ -24,7 +26,7 @@
         </nav>
     </header>
     
-    <section id="mainSection">
+    <section class="mainSection">
     {% if messages %}
        {% for message in messages %}
         {{message}}
@@ -32,7 +34,8 @@
     {% endif %}
 
     {% block content %}
-    {% endblock %}
+    {% endblock content %}
     </section> 
+    <script src="code.js"></script>
 </body>
 </html>
