--- a/LITReview/review/templates/review/posts.html
+++ b/LITReview/review/templates/review/posts.html
@@ -11,9 +11,11 @@
 
             <h3 class="ticket__title">{{ ticket.title }}</h3>
             <p class="ticket__description">{{ ticket.description }}</p>
-            <img class="ticket__image" src="{{ ticket.image.url }}">
-            <a class="flux__nav__link" href="{% url 'ticket-update' ticket.pk %}">Modifier</a>
-            <a class="flux__nav__link" href="{% url 'ticket-delete' ticket.pk %}">Supprimer</a> 
+            {% if ticket.image %}
+                <img class="ticket__image" src="{{ ticket.image.url }}">
+            {% endif %}    
+            <a class="btn" href="{% url 'ticket-update' ticket.pk %}">Modifier</a>
+            <a class="btn" href="{% url 'ticket-delete' ticket.pk %}">Supprimer</a> 
         </section>
     {% endfor %}
 
@@ -25,11 +27,10 @@
                     <div>Vous avez publié une critique</div>
                     <div>{{ review.time_created }}</div>
                     <h3>{{ review.headline }}</h3>
-                    
                     <div>Note: {{review.rating}}<span> ☆</span>
                     </div>
                     <div>{{ review.body }}</div>
-
+                    
                 <section class="ticket">
                     <div class="ticket__usernameAndDate"></div>
                     <div>Vous avez demandé une critique</div>
@@ -38,6 +39,9 @@
                     <h3 class="ticket__title">{{ review.ticket.title }}</h3>
                     <p class="ticket__description">{{ review.ticket.description }}</p>
                     <img class="ticket__image" src="{{ review.ticket.image.url }}">
+                    <a class="btn" href="{% url 'review-update' review.pk %}">Modifier</a>
+                    <a class="btn" href="{% url 'review-delete' review.pk %}">Supprimer</a>
+                    
                 </section>
             </section>
         {% endfor %}
