--- a/LITReview/review/templates/review/ticket_confirm_delete.html
+++ b/LITReview/review/templates/review/ticket_confirm_delete.html
@@ -3,7 +3,7 @@
 
     <h2 style="text-align: center;">Supprimer un ticket</h2>
 
-    <p>Etes-vous sûr de voulaoir supprimer le ticket : {{ ticket.title }}?</p>
+    <p>Etes-vous sûr de vouloir supprimer le ticket : {{ ticket.title }}?</p>
 
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
