--- a/LITReview/subscriptions/templates/subscriptions/subscriptions.html
+++ b/LITReview/subscriptions/templates/subscriptions/subscriptions.html
@@ -10,7 +10,6 @@
         {% csrf_token %}
         <div class="forms">
             <div>{{ form }}</div>
-  
             <input type="submit" value="Envoyer">
         </div> 
     </form>
@@ -27,9 +26,6 @@
             <p>Vous ne suivez aucun utilisateurs</p> 
         {% endfor %}
     
-        
-    
-
     <h2 style="text-align: center;">Abonnés</h2>
     <ul>
         {% for user in users %}
@@ -42,5 +38,5 @@
             <p>Aucun utilisateurs ne vous suit</p>
         {% endfor %}  
 
-    
+    <script src="/review/static/review/code.js"></script>
 {% endblock content%}
