--- a/LITReview/review/templates/review/review_snippet.html
+++ b/LITReview/review/templates/review/review_snippet.html
@@ -1,5 +1,5 @@
 <section class="review">
-    {% if  post.user.id == post.id%}
+    {% if  post.user.id == user.id%}
         <div class="review__usernameAndDate"></div>
         <div>Vous avez publié une critique</div>
         <div>{{ post.time_created }}</div>
@@ -14,21 +14,21 @@
         <div>Note: {{post.rating}}<span> ☆</span>
         </div>
         <div>{{ post.body }}</div>
-</section>
 
-<section class="ticket">
-{% if  post.user.id == post.id%}
-    <div class="ticket__usernameAndDate"></div>
-    <div>Vous avez demandé une critique</div>
-    <div>{{post.ticket.time_created}}</div>
-{% else %}
-    <div class="ticket__usernameAndDate"></div>
-    <div>{{post.ticket.user.username}} a demandé une critique</div>
-    <div>{{post.ticket.time_created}}</div>
-{% endif %}
 
-    <h3 class="ticket__title">{{ post.ticket.title }}</h3>
-    <p class="ticket__description">{{ post.ticket.description }}</p>
-    <img class="ticket__image" src="{{ post.ticket.image.url }}">
-        
+    <section class="ticket">
+    {% if  post.ticket.user.id == user.id%}
+        <div class="ticket__usernameAndDate"></div>
+        <div>Vous avez demandé une critique</div>
+        <div>{{post.ticket.time_created}}</div>
+    {% else %}
+        <div class="ticket__usernameAndDate"></div>
+        <div>{{post.ticket.user.username}} a demandé une critique</div>
+        <div>{{post.ticket.time_created}}</div>
+    {% endif %}
+
+        <h3 class="ticket__title">{{ post.ticket.title }}</h3>
+        <p class="ticket__description">{{ post.ticket.description }}</p>
+        <img class="ticket__image" src="{{ post.ticket.image.url }}">
+    </section>
 </section>
