--- a/LITReview/review/templates/review/ticket_update_form.html
+++ b/LITReview/review/templates/review/ticket_update_form.html
@@ -6,7 +6,7 @@
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form">
-            <!-- {{ form.as_p }} -->
+            {% comment %} {{ form.as_p }} {% endcomment %}
             <p>Titre : {{ form.title }}</p>
             <p>Description : {{ form.description }}</p>            
             {% if ticket.image %}
