--- a/LITReview/subscriptions/templates/subscriptions/userfollows_confirm_delete.html
+++ b/LITReview/subscriptions/templates/subscriptions/userfollows_confirm_delete.html
@@ -1,15 +1,10 @@
 {% extends "index.html" %}
 {% block content %}
-
     <h2 style="text-align: center;">Supprimer un utilisateur</h2>
-
-    <p>Etes-vous sûr de vouloir supprimer l'utilisateur' : {{ object.followed_user.username }}?</p>
-
+    <p>Etes-vous sûr de vouloir supprimer l'utilisateur : {{ object.followed_user.username }}?</p>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-
         <input type="submit" value="Oui, effacer">
-        <input type="button" href={% url 'subscriptions' %} value="Retour">
     </form>
-        
+    <button type="button" onclick={% url 'subscriptions' %}>Retour</button>
 {% endblock content %}
